# gitgud

./: .gitignore  README.md  pyproject.toml
src/gitgud/: __init__.py  __main__.py  config.py  github.py  main.py  models.py  theme.py
src/gitgud/widgets/: card_modal.py  modals.py  project_description.py  project_picker.py  swimlane.py  task_card.py  theme_picker.py  toc_modal.py
